# dset

./: .gitignore  For example  README.md  dpo.py  pipx install dset  pyproject.toml
reference/: OpenAI-Grammar-Constraint-Example-API-Call.txt
src/dset/: __main__.py  config.py  dataset.py  models.py  openai_api.py  operations.py
tests/: test_batch.py  test_operations.py
